--- a/public/index.html
+++ b/public/index.html
@@ -46,13 +46,13 @@
   </head>
   <body>
     <div id="fb-root"></div>
-    <script
+    <!-- <script
       async
       defer
       crossorigin="anonymous"
       src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0&appId=2912300119017999&autoLogAppEvents=1"
       nonce="IuQSplxZ"
-    ></script>
+    ></script> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
