--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,7 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQLhbqMNW1j54RhL_uDM5yvCXJTFSObE8&libraries=places"></script>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
